prism/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prism
  labels:
    name: production
