prism/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prism-server-deployment
  labels:
    app: prism-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prism-server
  template:
    metadata:
      labels:
        app: prism-server
    spec:
      containers:
        - name: prism-server
          image: registry.git.wthack.de/dsp/prism/prism-server:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
