prism/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prism-service
spec:
  type: NodePort
  selector:
    app: prism-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
