prism/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: "prism.rekkingcrew.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prism-service
            port:
              number: 80
